--- a/src/Components/Sidebar Section/sidebar.css
+++ b/src/Components/Sidebar Section/sidebar.css
@@ -162,7 +162,7 @@
     padding: 1.5rem 1.5rem 0;
   }
   .sideBar .logoDiv img {
-    max-width: 50px;
+    width: 55px;
     margin: 0;
     padding: 0.5rem;
     border-radius: 10px;
