--- a/src/Components/Sidebar Section/sidebar.scss
+++ b/src/Components/Sidebar Section/sidebar.scss
@@ -193,7 +193,7 @@
             padding: 1.5rem 1.5rem 0;
 
             img{
-                max-width: 50px;
+                width: 55px;
                 margin: 0;
                 padding: .5rem;
                 border-radius: 10px;
